--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
     ext {
+        googlePlayServicesVersion = "21.0.1" //add this line
         buildToolsVersion = "34.0.0"
         minSdkVersion = 21
         compileSdkVersion = 34
         targetSdkVersion = 34
-        ndkVersion = "25.1.8937393"
+        ndkVersion = "26.2.11394342"
         kotlinVersion = "1.8.0"   
     }
     repositories {
