--- a/package.json
+++ b/package.json
@@ -10,9 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.2.1",
     "@react-native-google-signin/google-signin": "^11.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/material-bottom-tabs": "^6.2.28",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-onboarding-swiper": "^1.2.0",
+    "react-native-pager-view": "^6.2.3",
+    "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "^3.8.1",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "rn-bottom-drawer": "^1.4.3",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
